Erweiterungen von R3 angefangen

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -48,6 +48,24 @@
  address = {Berkeley, CA, USA},
 }
 
+@article{tD2_SpMW02,
+ author = {Spring, Neil and Mahajan, Ratul and Wetherall, David},
+ title = {Measuring ISP topologies with rocketfuel},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ volume = {32},
+ issue = {4},
+ month = {August},
+ year = {2002},
+ issn = {0146-4833},
+ pages = {133--145},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/964725.633039},
+ doi = {http://doi.acm.org/10.1145/964725.633039},
+ acmid = {633039},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 
 @misc{RFC1142,
   author="D. Oran",
